# django-vuelidate

./: README.md  pyproject.toml
django_vuelidate/management/commands/: vuelidate.py
testproject/: django_vuelidate  settings.py
testproject/testapp/: forms.py  models.py
